--- a/Mainpage.html
+++ b/Mainpage.html
@@ -10,7 +10,8 @@
 		<div id="container">
 			
 			<header id="top_header">
-				This where the logo would go
+				This where the logo would go<br>
+				Ivy was here.
 			</header>
 						
 			<nav>
