--- a/Mainpage.html
+++ b/Mainpage.html
@@ -11,7 +11,7 @@
 			
 			<header id="top_header">
 				This where the logo would go<br>
-				Ivy was here.
+				Melina was here 
 			</header>
 						
 			<nav>
