--- a/Mainpage.html
+++ b/Mainpage.html
@@ -13,6 +13,7 @@
 				This where the logo would go<br>
 				Ivy was here.
 				Melina was heere 
+				Idiris was here.
 			</header>
 						
 			<nav>
