--- a/Mainpage.html
+++ b/Mainpage.html
@@ -12,7 +12,8 @@
 			<header id="top_header">
 				This where the logo would go<br>
 				Ivy was here.
-				Melina was heere 
+				Melina was heere
+				Cosmin was here.
 			</header>
 						
 			<nav>
