--- a/Mainpage.html
+++ b/Mainpage.html
@@ -12,8 +12,9 @@
 			<header id="top_header">
 				This where the logo would go<br>
 				Ivy was here.
-				Melina was heere
+				Melina was here
 				Cosmin was here.
+				Casey was here.
 			</header>
 						
 			<nav>
